Revert "script refinements, connections"
This reverts commit 89d8609d5549847e8e4c22ce3637684e03d5e9e4.
